solution mobile menu and small fix header itd

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -22,14 +22,25 @@
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   flex-direction: column;
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  padding-top: 50px;
   background-color: var(--black-color);
   color: var(--white-color);
+}
+
+@media only screen and (min-width: 1440px) {
+  body {
+    padding-top: 90px;
+  }
 }
 
 main {
